--- a/paginacompleta/index.html
+++ b/paginacompleta/index.html
@@ -130,7 +130,7 @@
         </div>
     </div>
     <div id="footer">
-        <div id="Direcciones">
+        <div id="listasfooter">
             <div class="lista">
                 <h5>ABOUT</h5>
                 <ul>
