--- a/paginacompleta/index.html
+++ b/paginacompleta/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <div id="logo">
-            <a href=""><img src="./imagenes/airbnblogoiz.PNG" alt=""></a>
+            <a href=""><img src="./imagenes/airbnblogoiz.PNG" alt="Logo"></a>
         </div>
         <div id="about">
             <p>About us</p>
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div>
-        <img src="./imagenes/imagenprincipal.PNG" alt="" id="imagen">
+        <img src="./imagenes/imagenprincipal.PNG" alt="Imagen Famili comiendo" id="imagen">
     </div>
     <div id="parrafo">
         <h2>About us</h2>
@@ -73,18 +73,18 @@
         <h2 class="titulos">Fouders</h2>
         <div>
             <div class="imagenes">
-                <img src="./imagenes/fotoairbnb1.PNG" alt="" class="photo">
+                <img src="./imagenes/fotoairbnb1.PNG" alt="Fundador de Airbnb" class="photo">
                 <h5><a href="https://news.airbnb.com/about-us/leadership/brian-chesky/">Brian Chesky</a></h5>
                 <p>Co-founder and Chief Executive Officer</p>
             </div>
             <div class="imagenes">
-                <img src="./imagenes/fotoairbnb2.PNG" alt="" class="photo">
+                <img src="./imagenes/fotoairbnb2.PNG" alt="Fundador de Airbnb" class="photo">
                 <h5><a href="https://news.airbnb.com/about-us/leadership/nathan-blecharczyk/">Nathan Blecharczyk</a>
                 </h5>
                 <p>Co-Founder, Chief Strategy Officer, Chairman of Airbnb China</p>
             </div>
             <div class="imagenes">
-                <img src="./imagenes/fotoairbnb3.PNG" alt="" class="photo">
+                <img src="./imagenes/fotoairbnb3.PNG" alt="Fundador de Airbnb" class="photo">
                 <h5><a href="https://news.airbnb.com/about-us/leadership/joe-gebbia/">Joe Gebbia</a></h5>
                 <p>Co-founder, Chairman of Samara and Airbnb.org</p>
             </div>
@@ -110,20 +110,20 @@
         </div>
         <div id="cuadrofecha">
             <div class="fechas">
-                <img src="./imagenes/story1.JPG" alt="" class="photo">
+                <img src="./imagenes/story1.JPG" alt="Fotos " class="photo">
                 <p>Brian and Joe host airbed & Breakfast's first guest</p>
             </div>
             <div class="fechas">
-                <img src="./imagenes/story2.JPG" alt="" class="photo">
+                <img src="./imagenes/story2.JPG" alt="Fotos" class="photo">
                 <p>Airbed & Breakfast officially launches durin SXSW.Two bookings!</p>
             </div>
             <div class="fechas">
-                <img src="./imagenes/story3.JPG" alt="" class="photo">
+                <img src="./imagenes/story3.JPG" alt="Fotos" class="photo">
                 <p>The Airbed & Breakfast website launches in time for the Democratic National Convention and gets 80
                     bookings</p>
             </div>
             <div class="fechas">
-                <img src="./imagenes/story4.JPG" alt="" class="photo">
+                <img src="./imagenes/story4.JPG" alt="Fotos" class="photo">
                 <p>We launch Payments, our bespoke payments platform which in 2019 processed about $70 billion in guest
                     and host transacions in over 40 currencies</p>
             </div>
@@ -200,10 +200,10 @@
                 </ul>
             </div>
             <div class="copy" id="redes">
-                <img src="./imagenes/twitter.JPG" alt="">
-                <img src="./imagenes/insta.JPG" alt="">
-                <img src="./imagenes/linkedin.JPG" alt="">
-                <img src="./imagenes/facebook.JPG" alt="">
+                <img src="./imagenes/twitter.JPG" alt="Twitter">
+                <img src="./imagenes/insta.JPG" alt="Instagram">
+                <img src="./imagenes/linkedin.JPG" alt="Likendin">
+                <img src="./imagenes/facebook.JPG" alt="Facebook">
             </div>
         </div>
     </div>
